--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
